Praktikum 4/Aufgabe 4/accessing-pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-server
  labels:
    DB: allowed
  namespace: demo-namespace
spec:
  containers:
  - name: allowed-container
    image: curlimages/curl:latest
    command: [ "sleep", "3600" ]
---
apiVersion: v1
kind: Pod
metadata:
  name: frontend-pod
  labels:
    DB: denied
  namespace: demo-namespace
spec:
  containers:
  - name: denied-container
    image: curlimages/curl:latest
    command: [ "sleep", "3600" ]
