Praktikum 4/Aufgabe 4/service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: service-pod
  labels:
    app: service
  namespace: demo-namespace
spec:
  containers:
  - name: service-container
    image: nginx:latest
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: demo-namespace
spec:
  selector:
    app: service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
