Praktikum 4/Aufgabe 4/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: define-db-access
  namespace: demo-namespace
spec:
  podSelector:
    matchLabels:
      app: service
  ingress:
  - from:
    - podSelector:
        matchLabels:
          DB: allowed
    ports:
    - protocol: TCP
      port: 80
